--- a/examples/login/views/account.ejs
+++ b/examples/login/views/account.ejs
@@ -2,3 +2,13 @@
 <p>Username: <%= user.username %></p>
 <p>Email: <%= user.email %></p>
 
+<% if(user.groups) { %>
+<div>
+    <p>Groups:</p>
+    <ul>
+    <% for(var i = 0; i<user.groups.length; i++) { %>
+        <li><%= user.groups[i] %></li>
+    <% } %>
+    </ul>
+</div>
+<% } %>
